--- a/lib/corq_web/controllers/page_html/users.html.heex
+++ b/lib/corq_web/controllers/page_html/users.html.heex
@@ -1,10 +1,8 @@
 <h1>This is lal the users</h1>
 <ul>
-
-<%= for user <- @users do %>
-<li>
-    <%= user.name %> - <%= user.email %>  
-</li>
-<% end %>
-
+  <%= for user <- @users do %>
+    <li>
+      {user.name} - {user.email}
+    </li>
+  <% end %>
 </ul>
